# AFragmenter

./: README.md  pyproject.toml
afragmenter/: __init__.py  afdb_client.py  afragmenter.py  cli.py  data_reader.py  format_result.py  graph.py  intervals.py  pae_handler.py  plotting.py  result.py  sequence_reader.py  structure_displacement.py  structure_viewer.py
benchmarking/: 01_download_data.sh  02_create_cath_test_set.py  02_create_ecod_test_sets.py  03_parameter_testing_chunks.py  03_submit_chunks.slurm  04_pkl_to_csv.py  README.md  requirements.txt
benchmarking/benchmarking_code/: __init__.py  backup_compare_pdb_afdb_lengths.py  compare_pdb_afdb_lengths.py  iou.py  parse_cathdomall.py  parse_ecod.py
benchmarking/results_csv/: cath.csv  ecod_afdb.csv  ecod_pdb.csv
benchmarking/test_data/: cath_test_set.json  ecod_test_set_500_afdb.json  ecod_test_set_500_pdb.json
images/: help_message_svg.py
tests/: test_PAEHandler.py  test_SequenceReader.py  test_afdb_client.py  test_afragmenter.py  test_cli.py  test_format_result.py  test_graph.py  test_pae_handler.py  test_sequence_reader.py
tests/data/: README.md
tests/data/B1LFV6/: B1LFV6.cif  B1LFV6.json
tests/data/P0A9R4/: P0A9R4.cif  P0A9R4.fasta  P0A9R4.json
