[tool.poetry]
name = "AFragmenter"
version = "0.0.3"
description = ""
authors = ["Stefaan Verwimp <stefaan.verwimp@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sverwimp/AFragmenter"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.9"
python-igraph = "^0.10.3"
numpy = "^2.0.0"
matplotlib = "^3.9.2"
rich = "^13.8.1"
rich-click = "^1.8.3"
biopython = "^1.84"
requests = "^2.32.3"

[tool.poetry.scripts]
afragmenter = 'afragmenter.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]