[project]
name = "AFragmenter"
version = "0.0.4"
description = ""
authors = [
    {name = "Stefaan Verwimp", email = "stefaan.verwimp@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sverwimp/AFragmenter"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"

dependencies = [
  "python-igraph>=0.10.3,<1.0.0",
  "numpy>=1.0.0",
  "matplotlib>=3.9.2,<4.0",
  "rich>=13.8.1,<14.0",
  "rich-click>=1.8.3,<2.0",
  "biopython>=1.76,<2.0",
  "requests>=2.32.3,<3.0"
]

[project.scripts]
afragmenter = 'afragmenter.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
